# scopeathon2025

./: .gitignore  README.md  fetch_census_data.py  get_chicago_tracts.ipynb  pyproject.toml
src/cooperation_racine/: __init__.py
